--- a/simple-emu-c64.csproj
+++ b/simple-emu-c64.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="emu6502.cs" />
     <Compile Include="emuc64.cs" />
+    <Compile Include="emuvic20.cs" />
     <Compile Include="simple-emu-c64.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="walk6502.cs" />
