--- a/simple-emu-c64.csproj
+++ b/simple-emu-c64.csproj
@@ -38,8 +38,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="emu6502.cs" />
+    <Compile Include="emuc16.cs" />
     <Compile Include="emuc64.cs" />
+    <Compile Include="emupet.cs" />
     <Compile Include="emuvic20.cs" />
+    <Compile Include="cbmconsole.cs" />
     <Compile Include="simple-emu-c64.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="walk6502.cs" />
