TED machines with memory banking now working!, VIC-20 memory configuration
Abstracted memory, so emulated system can bank memory.  Note: C64
banking (via $1) not implemented yet.   TED machines (C16, Plus/4) are
now working!!!   Minor fixes in emulation too.   And sample basic
program for drawing a circle in the console.

--- a/simple-emu-c64.csproj
+++ b/simple-emu-c64.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="emu6502.cs" />
-    <Compile Include="emuc16.cs" />
+    <Compile Include="emuted.cs" />
     <Compile Include="emuc64.cs" />
     <Compile Include="emupet.cs" />
     <Compile Include="emuvic20.cs" />
