c128 implementation in progress
hint: use X to exit from monitor to run BASIC

--- a/simple-emu-c64.csproj
+++ b/simple-emu-c64.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="emu6502.cs" />
+    <Compile Include="emuc128.cs" />
     <Compile Include="emucbm.cs" />
     <Compile Include="emuted.cs" />
     <Compile Include="emuc64.cs" />
